infra/k8s/deployment.yaml
# infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-crm-app
  labels:
    app: django-crm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-crm
  template:
    metadata:
      labels:
        app: django-crm
    spec:
      containers:
      - name: django-crm
        image: meu-app-django:latest # Tag será substituída pelo Jenkins
        ports:
        - containerPort: 8000
        command: ["python"]
        args: ["manage.py", "runserver", "0.0.0.0:8000"]
