infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-crm-service
spec:
  selector:
    app: django-crm 
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 8000 
  type: ClusterIP
